--- a/components/producciones/ProductionsAdvancedFilters/ProductionsAdvancedFilters.module.scss
+++ b/components/producciones/ProductionsAdvancedFilters/ProductionsAdvancedFilters.module.scss
@@ -154,7 +154,8 @@
                     @include container-width-1;  
                     margin-bottom: calc(22px + (60 - 22) * ((100vw - 300px) / (1024 - 300)));
                 }
-                .switch_box{
+
+                .resultContent, .switch_box{
                     position: relative;
                     height: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));
                     &:nth-child(1){
@@ -202,7 +203,34 @@
                             }
                         }
                     }
-                }    
+                }
+                
+                .resultContent{
+                    display: flex;
+                    align-items: flex-end;
+                    margin-left: auto;
+                    
+                    .resultData{
+                        align-items: center;
+                        @include font-level-4;
+                        color: $deep-blue;
+                        padding-left: 10px;
+                        
+
+                        @media screen and (max-width: 520px){                            
+                            @include font-level-5;
+                        }
+
+                        .resultNone{
+                            @media screen and (max-width: 920px){                            
+                                display:none;
+                            }
+                        }
+
+
+                    }                    
+                }
+
                 .clear_btn{
                     position: absolute;
                     top: 0;
