--- a/components/investigacion/ThemesAccordion/ThemesAccordion.module.scss
+++ b/components/investigacion/ThemesAccordion/ThemesAccordion.module.scss
@@ -131,7 +131,45 @@
                     strong{
                         font-weight: 700;
                     }
-                }            
+                    span{
+                        color: $gray-2;
+                    }                    
+                }
+
+                a{
+                    color: $deep-blue;
+                    strong{
+                        font-weight: 400;
+                    }
+                    @media screen and (min-width: 1025px){
+                        &:hover{
+                            color: $green-1;
+                        }
+                    }
+                }
+
+                ul{
+                    padding-left: calc(15px + (38 - 15) * ((100vw - 1200px) / (3840 - 1200)));    
+                    @media screen and (max-width: 1024px){
+                        padding-left: calc(12px + (28 - 12) * ((100vw - 300px) / (1024 - 300))); 
+                    }   
+                    li{
+                        @include font-level-4;
+                        color: $deep-blue;
+                        font-weight: 400;
+                        line-height: 144%;
+                        margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
+                        @media screen and (max-width: 1024px){
+                            margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                            line-height: 160%;
+                        }
+                    }
+                } 
+
+                img {
+                    width: 100%;
+                    height: auto;
+                }
             }
         }
     }
