--- a/components/asesorias/LeafsItem/LeafsItem.module.scss
+++ b/components/asesorias/LeafsItem/LeafsItem.module.scss
@@ -26,8 +26,7 @@
             padding: calc(28px + (94 - 28) * ((100vw - 1200px) / (3840 - 1200)));
             color: $deep-blue;  
             text-decoration: none;  
-            box-shadow: 6px 0px 12px -2px rgba(0,0,0,0.15);  
-            cursor: pointer;
+            box-shadow: 6px 0px 12px -2px rgba(0,0,0,0.15);              
             transition: all .3s;
             transition-timing-function: ease-out;
 
@@ -64,6 +63,10 @@
                 z-index: 1; 
                 right: 0;    
                 box-shadow: none;          
+            }
+
+            &.inactive{
+                cursor: pointer;                
             }
 
             @media screen and (min-width: 1025px){
