--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -259,9 +259,11 @@
             }
 
             div[data-type="img-w-pie"]{
-                padding-top: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
+                padding-top: calc(20px + (56 - 20) * ((100vw - 1200px) / (3840 - 1200)));  
+                padding-bottom: calc(15px + (45 - 15) * ((100vw - 1200px) / (3840 - 1200)));            
                 @media screen and (max-width: 1024px){
                     padding-top: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                    padding-bottom: calc(10px + (45 - 10) * ((100vw - 300px) / (1024 - 300)));
                 }
                 p{
                     @include font-level-5;
