--- a/components/home/SectionSelector/SectionSelector.module.scss
+++ b/components/home/SectionSelector/SectionSelector.module.scss
@@ -23,6 +23,7 @@
             transition: all 0.6s ease;                   
                  
             button{
+                display: block;
                 background-color: transparent;
                 outline: inherit;
                 border: none;
