--- a/components/asesorias/ParagraphAndButton/ParagraphAndButton.module.scss
+++ b/components/asesorias/ParagraphAndButton/ParagraphAndButton.module.scss
@@ -26,7 +26,7 @@
             line-height: 130%;
             color: $deep-blue;
             width: calc(620px + (2000 - 620) * ((100vw - 1200px) / (3840 - 1200))); 
-            span{
+            span, a{
                 background-image: url(../../../public/assets/images/line_bottom_yellow.svg);
                 background-repeat: repeat-x;
                 background-size: 
@@ -34,6 +34,8 @@
                 calc(10px + (20 - 10) * ((100vw - 1200px) / (3840 - 1200)));
                 background-position: bottom;
                 padding-bottom: calc(4px + (8 - 4) * ((100vw - 1200px) / (3840 - 1200)));
+                color: $deep-blue; 
+                text-decoration: none;
                 @media screen and (max-width: 1024px){
                     background-size: 
                     calc(16px + (60 - 16) * ((100vw - 300px) / (1024 - 300)))
