--- a/components/usina/CvSelector/CvSelector.module.scss
+++ b/components/usina/CvSelector/CvSelector.module.scss
@@ -174,7 +174,7 @@
             }
         }
     
-        .go_to_page{
+        .cv_view{
             @include btn-ver-mas;
         } 
     }       
