--- a/pages/usina/propuesta.module.scss
+++ b/pages/usina/propuesta.module.scss
@@ -16,9 +16,15 @@
     }
   
     div[data-id="accordion_1"]{
-        margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+        margin-bottom: calc((85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200))) * .5);
         @media screen and (max-width: 1024px){
-            margin-bottom: calc(65px + (185 - 65) * ((100vw - 300px) / (1024 - 300)));
+            margin-bottom: calc((65px + (185 - 65) * ((100vw - 300px) / (1024 - 300))) * .5);
+        }
+    }
+    div[data-id="cta_1"]{
+        margin-bottom: calc((85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200))) );
+        @media screen and (max-width: 1024px){
+            margin-bottom: calc((65px + (185 - 65) * ((100vw - 300px) / (1024 - 300))) );
         }
     }
     div[data-id=""]{
