--- a/components/usina/JoinIn/JoinIn.module.scss
+++ b/components/usina/JoinIn/JoinIn.module.scss
@@ -148,8 +148,7 @@
                     margin-bottom: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300)));
                 } 
                 p{                    
-                    margin-bottom: 0;
-                    
+                    margin-bottom: 0;                    
                 }              
                 h5{
                     @include font-level-3;
@@ -196,7 +195,7 @@
                 }
             }
             h4{
-                @include font-level-3;
+                @include font-level-4;
                 font-weight: 300; 
                 color: $deep-blue;
                 em{
@@ -206,21 +205,16 @@
             }
             .buttonContainer
             {
-                margin-top: calc((5px + (25 - 5) * ((100vw - 1200px) / (3840 - 1200))) * 3);
-
-                &:nth-child(1)
-                {
-                    margin-top: calc(5px + (25 - 5) * ((100vw - 1200px) / (3840 - 1200)));
-
+                margin-top: calc((15px + (25 - 15) * ((100vw - 1200px) / (3840 - 1200))));
+                @media screen and (max-width: 1024px){
+                    margin-top: calc(15px + (25 - 15) * ((100vw - 300px) / (1024 - 300)));
                 }
                 p{
                     margin-bottom: calc(5px + (25 - 5) * ((100vw - 1200px) / (3840 - 1200)));
-                    margin-top: calc(5px + (25 - 5) * ((100vw - 1200px) / (3840 - 1200)));
-
-                }
-                @media screen and (max-width: 1024px){
-                    margin-top: calc(4px + (8 - 4) * ((100vw - 300px) / (1024 - 300)));
-                }
+                    @media screen and (max-width: 1024px){
+                        margin-bottom: calc(5px + (25 - 5) * ((100vw - 300px) / (1024 - 300)));
+                    }
+                }                
             }
         }
     }
