--- a/components/usina/InterestedModal/InterestedModal.module.scss
+++ b/components/usina/InterestedModal/InterestedModal.module.scss
@@ -114,7 +114,7 @@
             }
         }
 
-        .input{
+        .input, .textarea{
             font-family: 'Roboto', sans-serif;
             @include font-level-4;
             font-weight: 400;
