--- a/styles/themeStyles.module.scss
+++ b/styles/themeStyles.module.scss
@@ -155,15 +155,16 @@ $line-2: calc(3px + (6 - 3) * ((100vw - 1200px) / (3840 - 1200)));
     display: flex;
     flex-wrap: wrap;
     background-color: $gray-6;
-    width: calc(450px + (1150 - 450) * ((100vw - 1200px) / (3840 - 1200)));
+    //width: calc(450px + (1150 - 450) * ((100vw - 1200px) / (3840 - 1200)));
+    width: 100%;
     padding: calc(15px + (60 - 15) * ((100vw - 1200px) / (3840 - 1200)));
-    margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));
+    //margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));
     color: $deep-blue;  
     text-decoration: none;    
     @media screen and (max-width: 1024px){
-        width: calc(255px + (880 - 255) * ((100vw - 300px) / (1024 - 300)));
+        //width: calc(255px + (880 - 255) * ((100vw - 300px) / (1024 - 300)));
         padding: calc(12px + (24 - 12) * ((100vw - 300px) / (1024 - 300)));
-        margin-left: 0;
+       // margin-left: 0;
     } 
     img{
         width: 100%;
