--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,12 +17,13 @@ html, body, #__next {
     -moz-osx-font-smoothing: grayscale;
     font-family: 'Roboto', sans-serif; 
     overscroll-behavior-y: none;
-    overflow: hidden;  
+    overflow: hidden!important;  
     @media screen and (max-width: 1024px){
-      width: 100%;
-      overflow-y: visible; 
-      overscroll-behavior-y: auto;
-      padding-top: calc(35px + (80 - 35) * ((100vw - 300px) / (1024 - 300)));
+    	width: 100%;
+		overflow-y: auto!important; 
+    	//overflow-y: visible; 
+    	overscroll-behavior-y: auto;
+    	padding-top: calc(35px + (80 - 35) * ((100vw - 300px) / (1024 - 300)));
     }
 }
 
@@ -30,9 +31,9 @@ body{
   background-color: $white;
 }
 
-.main-container{
-  overflow: hidden;
-}
+//.main-container{
+  //overflow: hidden;
+//}
 
 button{
     background-color: transparent;
