--- a/components/usina/InterestedModal/InterestedModal.module.scss
+++ b/components/usina/InterestedModal/InterestedModal.module.scss
@@ -131,13 +131,7 @@
                 calc(3px + (4 - 3) * ((100vw - 300px) / (1200 - 300)))
                 ;
                 border-bottom: calc(1.5px + (2.5 - 1.5) * ((100vw - 300px) / (1200 - 300))) solid $green-2;                             
-            }
-            &:last-of-type{
-                margin-bottom: calc(18px + (50 - 18) * ((100vw - 1200px) / (3840 - 1200)));
-                @media screen and (max-width: 1024px){
-                    margin-bottom: calc(15px + (40 - 16) * ((100vw - 300px) / (1200 - 300)));                                    
-                }
-            }
+            }            
             &::placeholder {                                
                 opacity: 1;  
                 color: $gray-2;                          
@@ -162,8 +156,11 @@
             }
         }
         .send_btn{
-            @include btn-ver-mas;
-            
+            @include btn-ver-mas;  
+            margin-top: calc(18px + (50 - 18) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-top: calc(15px + (40 - 16) * ((100vw - 300px) / (1200 - 300)));                                    
+            }            
             &[disabled]
             {
                 background-color: $gray-6;
